Niresh | Locale updates for gujarti(16th march data)

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -58,7 +58,7 @@
 	"Let's get started!": "ચાલો શરૂ કરીએ!",
 	"SKIP": "પછી રાખો",
 	"STOP RECORDING": "રેકોર્ડિંગ બંધ કરો",
-	"Audio recording is too small. Please Re-record": "ઓડિયો રેકોર્ડિંગ ખૂબ નાનું છે. કૃપા કરીને ફરીથી રેકોર્ડ કરો",
+	"Audio recording is too small. Please Re-record": "ઓડિયો રેકોર્ડીંગ ખૂબ જ નાનું છે, કૃપા કરીને ફરીથી રેકોર્ડ કરો",
 	"RE-RECORD": "ફરીથી-રેકોર્ડ કરો",
 	"NEXT": "આગળ",
 	"away from reaching your goal!": "તમારા લક્ષ્ય સુધી પહોંચવાથી થોડો દૂર!",
@@ -83,7 +83,7 @@
 	"Contribute your voice to create an open data repository of Indian languages": "ભારતીય ભાષાઓમાં ઓપન ડેટાનો ભંડાર બનાવવા માટે તમારો અવાજ આપો",
 	"Listen": "સાંભળો",
 	"Verify What They Say": "તેઓ જે કહે છે એને માન્ય કરો",
-	"Help us by validating the voice samples that others have contributed": "બીજાઓએ ફાળો આપેલા વોઇસ સેમ્પલ્સને માન્ય કરવા માટે અમને મદદ કરો",
+	"Help us by validating the voice samples that others have contributed": "અન્ય લોકોએ આપેલા અવાજોના નમૂના માન્ય કરવા માટે અમારી મદદ કરો",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "તમારી પસંદગીની ભાષા પસંદ કરો",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
@@ -100,12 +100,12 @@
 	"hours recorded": "રેકોર્ડ કરેલા કલાકો",
 	"Thank you for your enthusiasm to validate the voice samples": "વોઇસ સેમ્પલ્સને માન્ય કરવા માટે તમે બતાવેલા ઉત્સાહ બદલ તમારો આભાર.",
 	"Would you also like to contribute your voice?": "શું તમે તમારા અવાજનો ફાળો આપવા માંગો છો?",
-	"Start Contributing": "ફાળો આપવાનું ચાલુ કરો",
+	"Start Contributing": "તમારો ફાળો આપવાની શરૂઆત કરો",
 	"Start Contributing in <span id=\"spn-contribution-language\"></span>": "<span id=\"spn-contribution-language\"></span> ભાષામાં ફાળો આપવાનું શરૂ કરો",
 	"total hours validated": "કુુલ માન્ય કરેલા",
 	"total hours contributed": "કુલ સહભાગી",
 	"Select the language for contribution": "ફાળા માટે ભાષા પસંદ કરો",
-	"Show All": "બધાને બતાવો",
+	"Show All": "બધુ બતાવો",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "વાક્યાંશ: ભારતીય ભાષાઓ માટે એક ક્રાઉડસોર્સિંગની પહેલ",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ભારતીય ભાષાઓમાં અવાજ પારખતા મોડલ વિકસાવવા માટે, વિવિધ ભારતીય અવાજોના ઓપન ડેટા ભંડારની જરૂર છે.",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "અવાજ પારખનાર મોડલ્સ બનાવવાની ચાવી, સમગ્ર રાજ્યો અને બોલીઓ દ્વારા પૂરો પાડવામાં આવતો વિવિધ ડેટા છે.",
@@ -126,9 +126,9 @@
 	"Select the language": "એક ભાષા પસંદ કરો",
 	"All Languages": "તમામ ભાષાઓ",
 	"Data Last Updated": "છેલ્લે અપડેટ કરાયેલો ડેટા",
-	"We do not have any data for this language, would you like to contribute for it?": "અમારી પાસે આ ભાષા માટે કોઈ ડેટા નથી, શું તમે ફાળો આપવા ઈચ્છો છો?",
-	"Contribute Now": "હવે ફાળો",
-	"hours validated": "કલાક માન્ય",
+	"We do not have any data for this language, would you like to contribute for it?": "અમારી પાસે આ ભાષાની કોઈ માહિતી નથી , શું તમે આમાં ફાળો આપશો?",
+	"Contribute Now": "હવે ફાળો આપો",
+	"hours validated": "માન્ય કલાકો",
 	"Progress Chart": "પ્રગતિની સમયરેખા",
 	"Monthly": "માસિક",
 	"Quarterly": "ત્રિમાસિક",
@@ -138,29 +138,48 @@
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.",
 	"Ensure the voice is <b>clear and audible</b>": "ખાતરી કરો કે અવાજ <b>સ્પષ્ટ અને સંભાળ</b> એવો છે",
 	"Match the voice to the text <b>accurately</b>": "અવાજને ટેક્સ્ટ સાથે <b>સચોટ રીતે</b> મેળવો",
-	"If you are unsure of the match, skip the particular voice sample": "જો તમે મેળવી ન શકતા હો, તો એ વોઇસ સેમ્પલને રેકોર્ડ કરવાનું મૂકી દો",
-	"Oops": "અરેરે",
+	"If you are unsure of the match, skip the particular voice sample": "જો તમે મેચ કરવા બાબતે અસહમત હો, તો તે અવાજના નમૂનાને અવગણો",
+	"Oops": "અરે રે",
 	"Page Not Found": "પેજ મળ્યું નહિ",
 	"Looks like you have taken a wrong turn here": "એવું લાગે છે કે તમે અહીં ખોટો વળાંક લીધો છે",
 	"Click Here": "ક્લિક કરો",
 	"to go back to home page": "હોમ પેજ પર જવા માટે અહીં પર",
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "અમે <span id=\"spn-validation-language\"></span> ભાષા માટે તાજેતરમાં જ ડેટાનો ફાળો શરૂ કર્યો છે અને આશા રાખીએ છીએ કે જલદી જ વોઇસ સેમ્પલ્સ ભેગા કરવામાં આવશે",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "તમે અમને <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> સેકંડ માન્ય કરવામાં સહાય કરી છે",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "તમે <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> રેકોર્ડીંગને માન્ય કરવામાં અમારી મદદ કરી",
 	"EkStep Foundation": "EkStep ફાઉન્ડેશન",
-	"hrs recorded in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
-	"hrs validated in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "રેકોર્ડિંગ આપમેળે <span id=\"counter\"></span> સેકન્ડમાં બંધ થઈ જશે",
-	"Incorrect": "ખોટો",
+	"hrs recorded in": "%language માં %hours રેકોર્ડ થયેલા કલાકો",
+	"hrs validated in": "%language માં %hours માન્ય કલાકો",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> સેકન્ડ પછી રેકોર્ડીંગ આપમેળે બંધ થઈ જશે",
+	"Incorrect": "ખોટું",
 	"Replay": "ફરી-પ્લે કરો",
-	"Pause": "થોભાવો",
-	"Correct": "યોગ્ય",
+	"Pause": "થોભો",
+	"Correct": "સાચું",
 	"Skip": "પછી રાખો",
 	"hours": "કલાકો",
 	"minutes": "મિનિટો",
 	"seconds": "સેકન્ડ્સ",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "હોમ પેજ પર જવા માટે અહીં <a class=\"\" href=\"/\">ક્લિક કરો</a>",
-	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "તમે તમારા અવાજના <b><span id=\"user-contribution\"></span></b> રેકોર્ડિંગનો ફાળો આપેલો છે",
-	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ટીમ તરીકે, અમે તમને અમારી સાથે જોડાવા અને આ પહેલમાં તમારા અવાજનું યોગદાન આપવા માટે આમંત્રણ આપી રહ્યા છીએ. એક લાંબા શ્વાસમાં તમારો અવાજ રેકોર્ડ કરવો મુશ્કેલ શકે છે અને તેથી, અમે અમારી વેબસાઇટ પર સરળ પગલાં બનાવ્યા છે, જેથી કરીને તમે ઘણી વખત અમારી મુલાકાત લો અને જ્યાંથી તમે છોડી દીધું છે તે શરૂ કરો.",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "સ્પીચ રેકગ્નિશન \"મશીન લર્નિંગ\" ટેકનોલોજી પર આધાર રાખે છે, જેમાં ડેટાબેસનું મોટું કલેક્શન જરૂરી છે જેમાં જુદા જુદા ભારતીય અવાજો અને સંબંધિત શબ્દોનો સમાવેશ થાય છે. વાક્યાંશ દ્વારા અમે ભારતીય ભાષા બોલતા ભારતીય અવાજનો વિવિધ ખુલ્લો ભંડાર બનાવવા માંગીએ છીએ જેનો ઉપયોગ આ પહેલ માટે કરી શકાય છે",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "તમે તમારા અવાજના <b><span id=\"user-contribution\"></span></b> રેકોર્ડીંગનો ફાળો આપ્યો છે",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ટીમ તરીકે, અમે તમને અમારી સાથે જોડાવા અને આ પહેલમાં તમારા અવાજનું યોગદાન આપવા માટે આમંત્રણ આપી રહ્યા છીએ. એક લાંબા પ્રયાસમાં તમારો અવાજ રેકોર્ડ કરવો મુશ્કેલ થઈ શકે છે અને તેથી, અમે અમારી વેબસાઇટ પર સરળ પગલાં તૈયાર કર્યા છે, જેથી કરીને તમે ઘણી વખત અમારી મુલાકાત લો અને જ્યાંથી તમે છોડી દીધું છે ત્યાંથી શરૂ કરી શકો.",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "સ્પીચ રેકગ્નિશન \"મશીન લર્નિંગ\" ટેકનોલોજી પર આધાર રાખે છે, જેમાં માહિતીનું વિશાળ ભંડોળ જરૂરી છે જેમાં વૈવિધ્યસભર ભારતીય અવાજો અને સંબંધિત શબ્દોનો સમાવેશ થાય છે. વાક્યાંશ દ્વારા અમે ભારતીય ભાષા બોલતા ભારતીય અવાજનો વૈવિધ્યસભર ઓપન સોર્સ ભંડાર બનાવવા માંગીએ છીએ, જેનો ઉપયોગ આ પહેલ માટે કરી શકાય છે",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Transgender - He": "Transgender - He",
+	"Transgender - She": "Transgender - She",
+	"Rather Not Say": "Rather Not Say",
+	"Feedback": "Feedback",
+	"Quick Tips": "Quick Tips",
+	"Read once <b>before recording it</b>": "તેને રેકોર્ડ કરતાં પહેલાં એક વખત વાંચો",
+	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
+	"Test mic": "Test mic",
+	"Test Speakers": "Test Speakers",
+	"You are a champion": "તમે વિજેતા છો",
+	"WooHoo!! You took the first important step": "વાહ ! તમે પહેલો મહત્વપૂર્ણ પડાવ લીધો",
+	"recordings contributed": "recordings contributed",
+	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.",
+	"Did you know?": "શું તમે જાણો છો?",
+	"Most data recorded for": "Most data recorded for",
+	"Data recorded for": "Data recorded for",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "તમારી ભાષાને તેના 100 કલાકના લક્ષ્યને હાંસલ કરવા મદદ કરો. અમે જાણીએ છીએ કે તમે વધુ કરી શકશો!",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>"
 }
