|Sreejith| Update 16th March content Tamil

--- a/locales/ml.json
+++ b/locales/ml.json
@@ -154,7 +154,7 @@
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
-	"Quick Tips": "Quick Tips",
+	"Quick Tips": "ക്വിക്ക് ടിപ്സ്",
 	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
 	"You are a champion": "നിങ്ങളൊരു ജേതാവായിരിക്കുന്നു",
 	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
