|Sreejith| Update 16th March content Telugu

--- a/locales/te.json
+++ b/locales/te.json
@@ -138,7 +138,7 @@
 	"Test your Microphone and Speakers": "దయచేసి మీ మైక్రోఫోన్   మరియు స్పీకర్లను పరీక్ష చెయ్యండి",
 	"Test mic": "మీ మైక్ను  పరీక్ష చెయ్యండి",
 	"Test Speakers": "స్పీకర్ను పరీక్ష చెయ్యండి",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Please test your <b>speakers</b>": "దయచేసి మీ <b>స్పీకర్లను</b> పరీక్ష చెయ్యండి",
 	"You are a champion": "మీరు విజేత",
 	"WooHoo!! You took the first important step": "అభినందనలు! మీరు ప్రథమ ముఖ్యమైన అడుగును ఎంచుకున్నారు",
 	"recordings contributed": "రికార్డింగ్స్ సహాయం",
