|Priyanshu| heading 'Winning back our languages....ecosystem' will be replaced with 'Help your own language' on about-us page

--- a/locales/as.json
+++ b/locales/as.json
@@ -167,5 +167,6 @@
 	"Test mic": "মাইক্ৰফোন পৰীক্ষা কৰক",
 	"Test Speakers": "স্পীকাৰ পৰীক্ষা কৰক",
 	"Recording": "ৰেকৰডিং",
-	"Playing": "বজাওক"
+	"Playing": "বজাওক",
+	"Help your own language": "Help your own language"
 }
