--- a/locales/bn.json
+++ b/locales/bn.json
@@ -217,5 +217,6 @@
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
 	"Quick Tips": "Quick Tips",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>"
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Help your own language": "Help your own language"
 }
