--- a/locales/kd.json
+++ b/locales/kd.json
@@ -116,5 +116,6 @@
 	"Share it with your friends and family": "तुमचे इश्ट आणी परिवारांक कळीत करात",
 	"hrs recorded in": "%hours hrs recorded in %language",
 	"hrs validated in": "%hours hrs validated in %language",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Help your own language": "Help your own language"
 }
