--- a/locales/kn.json
+++ b/locales/kn.json
@@ -158,5 +158,6 @@
 	"Test mic": "ಮೈಕ್ ಪರೀಕ್ಷಿಸಿ",
 	"Test Speakers": "ಧ್ವನಿವರ್ಧಕವನ್ನು ಪರೀಕ್ಷಿಸಿ",
 	"Recording": "ರೆಕಾರ್ಡಿಂಗ್",
-	"Playing": "ನುಡಿಸುವಿಕೆ"
+	"Playing": "ನುಡಿಸುವಿಕೆ",
+	"Help your own language": "Help your own language"
 }
