--- a/locales/kr.json
+++ b/locales/kr.json
@@ -116,5 +116,6 @@
 	"If you are unsure of the match, skip the particular voice sample": "Tuka zor zullpachi khatri na, omuk talleacho nomuno vogllai",
 	"hrs recorded in": "%hours hrs recorded in %language",
 	"hrs validated in": "%hours hrs validated in %language",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Help your own language": "Help your own language"
 }
