--- a/locales/mr.json
+++ b/locales/mr.json
@@ -165,5 +165,6 @@
 	"Test mic": "माईकची चाचणी करा",
 	"Test Speakers": "स्पीकरची चाचणी करा",
 	"Recording": "ध्वनिमुद्रण",
-	"Playing": "वाजत आहे"
+	"Playing": "वाजत आहे",
+	"Help your own language": "Help your own language"
 }
