--- a/locales/or.json
+++ b/locales/or.json
@@ -164,5 +164,6 @@
 	"Test mic": "ମାଇକ୍ ଟେଷ୍ଟ କରନ୍ତୁ",
 	"Test Speakers": "ସ୍ପିକର ଟେଷ୍ଟ କରନ୍ତୁ",
 	"Recording": "ରେକର୍ଡ଼ିଂ କରନ୍ତୁ",
-	"Playing": "ପ୍ଲେ ହେଉଛି"
+	"Playing": "ପ୍ଲେ ହେଉଛି",
+	"Help your own language": "Help your own language"
 }
