--- a/locales/sa.json
+++ b/locales/sa.json
@@ -123,5 +123,6 @@
 	"Page Not Found": "पृष्ठं न लब्धम्  |",
 	"Looks like you have taken a wrong turn here": "भवता  अत्र अनुचितं वर्तनं कृतम् इव भासते  |",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "पुन: मूलपृष्ठं गन्तुं अत्र <a class=\"\" href=\"/\">क्लिक्-करोतु |</a>",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Help your own language": "Help your own language"
 }
