--- a/locales/te.json
+++ b/locales/te.json
@@ -149,5 +149,6 @@
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
 	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.",
 	"Recording": "రికార్డ్ అవుతోంది",
-	"Playing": "ప్లే అవుతోంది"
+	"Playing": "ప్లే అవుతోంది",
+	"Help your own language": "Help your own language"
 }
