--- a/locales/doi.json
+++ b/locales/doi.json
@@ -163,5 +163,6 @@
 	"minutes": "मिंट",
 	"seconds": "સેકન્ડ્સ",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "હોમ પેજ પર જવા માટે અહીં <a class=\"\" href=\"/\">ક્લિક કરો</a>",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Help your own language": "Help your own language"
 }
