--- a/locales/gu.json
+++ b/locales/gu.json
@@ -181,5 +181,6 @@
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "તમારી ભાષાને તેના 100 કલાકના લક્ષ્યને હાંસલ કરવા મદદ કરો. અમે જાણીએ છીએ કે તમે વધુ કરી શકશો!",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>"
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Help your own language": "Help your own language"
 }
