--- a/locales/hi.json
+++ b/locales/hi.json
@@ -162,5 +162,6 @@
 	"Did you know?": "Did you know?",
 	"Most data recorded for": "Most data recorded for",
 	"Data recorded for": "Data recorded for",
-	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!"
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
+	"Help your own language": "Help your own language"
 }
