--- a/locales/mnimm.json
+++ b/locales/mnimm.json
@@ -2,5 +2,6 @@
   "Language": "Manipuri MM",
   "hrs recorded in": "%hours hrs recorded in %language",
   "hrs validated in": "%hours hrs validated in %language",
-  "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+  "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+  "Help your own language": "Help your own language"
 }
