|Priyanshu + Raunak| added translation for 'Help your own language' in 12 primary languages

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -163,5 +163,5 @@
 	"Most data recorded for": "Most data recorded for",
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
-	"Help your own language": "Help your own language"
+	"Help your own language": "अपनी भाषा में मदद करें"
 }
