--- a/locales/kn.json
+++ b/locales/kn.json
@@ -159,5 +159,5 @@
 	"Test Speakers": "ಧ್ವನಿವರ್ಧಕವನ್ನು ಪರೀಕ್ಷಿಸಿ",
 	"Recording": "ರೆಕಾರ್ಡಿಂಗ್",
 	"Playing": "ನುಡಿಸುವಿಕೆ",
-	"Help your own language": "Help your own language"
+	"Help your own language": "ನಿಮ್ಮ ಸ್ವಂತ ಭಾಷೆಗೆ ಸಹಾಯ ಮಾಡಿ"
 }
