--- a/locales/mr.json
+++ b/locales/mr.json
@@ -166,5 +166,5 @@
 	"Test Speakers": "स्पीकरची चाचणी करा",
 	"Recording": "ध्वनिमुद्रण",
 	"Playing": "वाजत आहे",
-	"Help your own language": "Help your own language"
+	"Help your own language": "तुमच्या स्वतःच्या भाषेला सहाय्य करा"
 }
