--- a/locales/or.json
+++ b/locales/or.json
@@ -165,5 +165,5 @@
 	"Test Speakers": "ସ୍ପିକର ଟେଷ୍ଟ କରନ୍ତୁ",
 	"Recording": "ରେକର୍ଡ଼ିଂ କରନ୍ତୁ",
 	"Playing": "ପ୍ଲେ ହେଉଛି",
-	"Help your own language": "Help your own language"
+	"Help your own language": "ନିଜ ଭାଷାରେ ସହାୟତା କରନ୍ତୁ"
 }
