--- a/locales/pa.json
+++ b/locales/pa.json
@@ -193,5 +193,5 @@
 	"You are in control, lead the way":"ਕਮਾਨ ਤੁਹਾਡੇ ਹੱਥ ਵਿੱਚ ਹੈ, ਸਾਡੀ ਅਗਵਾਈ ਕਰੋ",
 	"Spread the word. Share it with your friends and family.": "ਇਸ ਬਾਰੇ ਸਭ ਨੂੰ ਦੱਸੋ। ਆਪਣੇ ਦੋਸਤਾਂ ਅਤੇ ਪਰਿਵਾਰ ਨਾਲ ਇਸ ਨੂੰ ਸਾਂਝਾ ਕਰੋ।",
 	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great lingusitic applications. Our <x> language ranks <y> on boloindia. Do your bit and empower the language?": "ਮੈਂ https://boloindia.nplt.in 'ਤੇ ਭਾਰਤ ਲਈ ਭਾਸ਼ਾਵਾਂ ਦੇ ਖੁੱਲੇ ਸਰੋਤ ਦੇ ਭੰਡਾਰ ਨੂੰ ਬਣਾਉਣ ਵਿੱਚ ਆਪਣਾ ਯੋਗਦਾਨ ਪਾਇਆ। ਮੈਂ ਅਤੇ ਤੁਸੀਂ ਆਪਣੀਆਂ ਅਵਾਜ਼ਾਂ ਦਾ ਯੋਗਦਾਨ ਕਰਕੇ ਮਸ਼ੀਨਾਂ ਨੂੰ ਸਾਡੀਆਂ ਭਾਸ਼ਾਵਾਂ ਸਿੱਖਣ ਅਤੇ ਬਿਹਤਰੀਨ ਭਾਸ਼ਾਈ ਐਪਲੀਕੇਸ਼ਨਾਂ ਰਾਹੀਂ ਸਾਡੇ ਨਾਲ ਗੱਲਬਾਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ। ਸਾਡੀ <x> ਭਾਸ਼ਾ boloindia 'ਤੇ <y> ਦਰਜੇ 'ਤੇ ਹੈ। ਕੀ ਤੁਸੀਂ ਯੋਗਦਾਨ ਪਾ ਕੇ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਸ਼ਕਤ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
-	"Help your own language": "Help your own language"
+	"Help your own language": "ਆਪਣੀ ਖੁਦ ਦੀ ਭਾਸ਼ਾ ਦੀ ਮਦਦ ਕਰੋ"
 }
