--- a/locales/te.json
+++ b/locales/te.json
@@ -150,5 +150,5 @@
 	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.",
 	"Recording": "రికార్డ్ అవుతోంది",
 	"Playing": "ప్లే అవుతోంది",
-	"Help your own language": "Help your own language"
+	"Help your own language": "మీ స్వంత భాష సహాయం"
 }
