--- a/locales/ml.json
+++ b/locales/ml.json
@@ -164,5 +164,5 @@
 	"Most data recorded for": "Most data recorded for",
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
-	"Help your own language": "Help your own language"
+	"Help your own language": "നിങ്ങളുടെ മാതൃഭാഷയെ പരിപോഷിപ്പിക്കൂ"
 }
