--- a/locales/ta.json
+++ b/locales/ta.json
@@ -206,5 +206,5 @@
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
 	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
-	"Help your own language": "Help your own language"
+	"Help your own language": "ங்கள் சொந்த மொழிக்கு உதவவும்"
 }
