|Priyanshu + Raunak| fix json bug

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -217,5 +217,5 @@
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
 	"Quick Tips": "Quick Tips",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>"
 }
