--- a/locales/or.json
+++ b/locales/or.json
@@ -54,11 +54,11 @@
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Recording Instructions": "ରେକର୍ଡ଼ ନିର୍ଦ୍ଦେଶାବଳୀ",
-	"START": "ଆରମ୍ଭ",
+	"START": "ଆରମ୍ଭ କରନ୍ତୁ",
 	"Let's get started!": "ଆସନ୍ତୁ ଆରମ୍ଭ କରିବା!",
 	"SKIP": "ଏଡାନ୍ତୁ",
 	"STOP RECORDING": "ରେକର୍ଡ଼ିଂ ବନ୍ଦ କରନ୍ତୁ",
-	"Audio recording is too small. Please Re-record": "ଅଡିଓ ରେକର୍ଡ଼ିଂ ବହୁତ ଛୋଟ। ଦୟାକରି ପୁଣିଥରେ ରେକର୍ଡ଼ କରନ୍ତୁ",
+	"Audio recording is too small. Please Re-record": "ଅଡିଓ ରେକର୍ଡିଂ ବହୁତ ଛୋଟ। ଦୟାକରି ପୁଣି ଥରେ ରେକର୍ଡ଼ କରନ୍ତୁ",
 	"RE-RECORD": "ପୁନଃରେକର୍ଡ଼",
 	"NEXT": "ପରବର୍ତ୍ତୀ",
 	"away from reaching your goal!": "ଆପଣଙ୍କର ଲକ୍ଷ୍ୟ ଠାରୁ ଦୂରରେ",
@@ -83,7 +83,7 @@
 	"Contribute your voice to create an open data repository of Indian languages": "ଭାରତୀୟ ଭାଷାର ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବା ପାଇଁ ଆପଣଙ୍କର ସ୍ୱରକୁ ପ୍ରଦାନ କରନ୍ତୁ।",
 	"Listen": "ଶୁଣନ୍ତୁ ",
 	"Verify What They Say": "ସେମାନେ ଯାହା କହୁଛନ୍ତି ତାହାକୁ ବୈଧ କରନ୍ତୁ",
-	"Help us by validating the voice samples that others have contributed": "ଅନ୍ୟମାନେ ପ୍ରଦାନ କରିଥିବା ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାରେ ଆମକୁ ସାହାଯ୍ୟ କରନ୍ତୁ।",
+	"Help us by validating the voice samples that others have contributed": "ଅନ୍ୟମାନେ ପ୍ରଦାନ କରିଥିବା ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାରେ ଆମକୁ ସାହାଯ୍ୟ କରନ୍ତୁ ।",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "ଆପଣଙ୍କର ପସନ୍ଦର ଭାଷାକୁ ବାଛନ୍ତୁ",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
@@ -94,7 +94,7 @@
 	"Thank you for your enthusiasm to validate the voice samples": "ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାକୁ ଆପଣଙ୍କର ଉତ୍ସାହ ପାଇଁ ଧନ୍ୟବାଦ।",
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ଆମେ ବର୍ତ୍ତମାନ <span id=\"spn-validation-language\"></span> ଭାଷା ପାଇଁ ଡାଟା ଅବଦାନ ଯାତ୍ରା ଆରମ୍ଭ କରିଛୁ ଏବଂ ଆଶା କରୁଛୁ ଖୁବ୍ ଶୀଘ୍ର ଆପଣଙ୍କର ବୈଧତା ପାଇଁ ଭଏସ୍ ନମୁନା ସଂଗ୍ରହ ହେବ।",
 	"Would you also like to contribute your voice?": "ଆପଣ ମଧ୍ୟ ଆପଣଙ୍କର ସ୍ବର ଦେବାକୁ ଚାହୁଁଛନ୍ତି କି?",
-	"Start Contributing": "ପ୍ରଦାନ କରିବା ଆରମ୍ଭ କରନ୍ତୁ",
+	"Start Contributing": "ପ୍ରଦାନ କରନ୍ତୁ",
 	"Thank you for validating!": "ବୈଧ କରାଇଥିବାରୁ ଆପଣଙ୍କୁ ଧନ୍ୟବାଦ!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.",
 	"total hours validated": "total hours validated",
@@ -111,7 +111,7 @@
 	"VIEW ALL DETAILS": "ସମସ୍ତ ସବିଶେଷକୁ ଦେଖନ୍ତୁ",
 	"Select Age Group": "ବୟସ ଗ୍ରୁପ ବାଛନ୍ତୁ",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"Show All": "ସବୁକୁ ଦେଖାନ୍ତ",
+	"Show All": "ସବୁକୁ ଦେଖାନ୍ତୁ",
 	"Enter preferred username": "ପସନ୍ଦର ୟୁଜରନେମ ଏଣ୍ଟର କରନ୍ତୁ",
 	"Username cannot be more than 12 characters": "ୟୁଜରନେମ 12 ଟି କ୍ୟାରେକ୍ଟରରୁ ଅଧିକ ହେବ ନାହିଁ",
 	"Data Last Updated": "ଶେଷରେ ଅପଡେଟ୍ ହୋଇଥିବା ତାରିଖ",
@@ -122,41 +122,41 @@
 	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "ଭାଷା ସ୍ୱୀକୃତି ହେଉଛି ଏକ ବୈଷୟିକି ଯାହା ଭାଷାକୁ ରିୟଲ୍ ଟାଇମ ଟେକ୍ସଟରେ ପରିଣତ କରେ। ଭାରତୀୟ ଭାଷାଗୁଡ଼ିକ ପାଇଁ ଏହିପରି ଏକ ମଡେଲ, ଶିକ୍ଷା, ସ୍ୱାସ୍ଥ୍ୟସେବା ଏବଂ ଗଣମାଧ୍ୟମ ପରି ବିଭିନ୍ନ କ୍ଷେତ୍ରରେ ଡିଜିଟାଲ୍ ଫାଷ୍ଟ ମଡେଲ ହେବା ପାଇଁ ସହାୟକ ହେବାର ସାମର୍ଥ୍ୟ ରହିଛି।",
 	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "ପ୍ରସ୍ତାବିତ ବିକାଶ କରିବାକୁ ଥିବା ଟୁଲ୍‌, ୟୁଟିଲିଟି ଓ ମଡେଲ ବାକ୍ୟାଂଶ କ୍ରାଉଡସୋର୍ସିଂ ପ୍ଲାଟଫର୍ମର ଉନ୍ମୁକ୍ତ ଉତ୍ସ ଅବଦାନ ଉପରେ ନିର୍ଭର କରିବ।",
 	"EkStep Foundation": "ଏକଷ୍ଟେପ ଫାଉଣ୍ଡେସନ",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "ଆପଣ ଆମକୁ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ଟି ରେକର୍ଡିଂ ବ valid ଧ କରିବାରେ ସାହାଯ୍ୟ କରିଛନ୍ତି |",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ରେକର୍ଡିଂକୁ ଭାଲିଡେଟ୍ କରିବାରେ ଆପଣ ଆମକୁ ସହାୟତା କରୁଛନ୍ତି |",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
-	"Oops": "ଓହୋ",
+	"If you are unsure of the match, skip the particular voice sample": "ଯଦି ଆପଣ ମ୍ୟାଚ ସମ୍ପର୍କରେ ଅନିଶ୍ଚିତ ଅଟନ୍ତି ତେବେ ନିର୍ଦ୍ଦିଷ୍ଟ ସ୍ବର ନମୁନାକୁ ଏଡ଼ାନ୍ତୁ",
+	"Oops": "ଉପ୍‌ସ",
 	"Page Not Found": "ପେଜ୍ ମିଳୁ ନାହିଁ",
 	"Looks like you have taken a wrong turn here": "ଲାଗୁଛି ଆପଣ ଏଠାରେ ଭୁଲ ମାର୍ଗ ନେଇଛନ୍ତି",
 	"Click Here": "ଏଠାରେ  ଉପରେ କ୍ଲିକ କରନ୍ତୁ।",
 	"to go back to home page": "ହୋମ୍ ପେଜକୁ ଯିବା ପାଇଁ",
 	"Select the language": "ଭାଷା ଚୟନ କରନ୍ତୁ",
 	"All Languages": "ସମସ୍ତ ଭାଷା",
-	"We do not have any data for this language, would you like to contribute for it?": "ଏହି ଭାଷା ପାଇଁ ଆମ ନିକଟରେ କୌଣସି ଡାଟା ନାହିଁ, ଆପଣ ଏଥିପାଇଁ ପ୍ରଦାନ କରିବାକୁ ଚାହିଁବେ କି?",
-	"Contribute Now": "ବର୍ତ୍ତମାନ ଯୋଗଦାନ କରନ୍ତୁ |",
-	"hours validated": "ଘଣ୍ଟା ବୈଧ",
+	"We do not have any data for this language, would you like to contribute for it?": "ଏହି ଭାଷା ପାଇଁ ଆମ ନିକଟରେ କିଛି ଡାଟା ନାହିଁ, ଆପଣ ପ୍ରଦାନ କରିବାକୁ ଚାହିଁବେ କି?",
+	"Contribute Now": "ଏବେ ପ୍ରଦାନ କରନ୍ତୁ |",
+	"hours validated": "ବୈଧ ହୋଇଥିବା ଘଣ୍ଟା",
 	"Progress Chart": "ପ୍ରଗତି ଟାଇମଲାଇନ୍",
-	"Monthly": "ମାସିକ",
-	"Quarterly": "ତୈମାସିକ",
+	"Monthly": "ମାସ",
+	"Quarterly": "ତ୍ରୟମାସିକ",
 	"Gender Contribution": "ଲିଙ୍ଗ ଅବଦାନ",
 	"State Wise distribution": "ରାଜ୍ୟ ୱାରି ଆବଣ୍ଟନ",
 	"Age Group Distribution": "ବୟସ ବର୍ଗ ଆବଣ୍ଟନ",
 	"hrs recorded in": "%language ରେ %hours ଘଣ୍ଟା ରେକର୍ଡ଼ ହୋଇଛି",
 	"hrs validated in": "%language ରେ %hours ଘଣ୍ଟା ବୈଧ ହୋଇଛି",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ସେକେଣ୍ଡ ପରେ ରେକର୍ଡ଼ିଂ ଆପେ ଆପେ ବନ୍ଦ ହେବ",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "ରେକର୍ଡିଂ ଆପେ ଆପେ <span id=\"counter\"></span> ସେକେଣ୍ଡ ପରେ ବନ୍ଦ ହୋଇଯିବ",
 	"Incorrect": "ଭୁଲ",
 	"Replay": "ରିପ୍ଲେ",
 	"Pause": "ରୁହନ୍ତୁ",
-	"Correct": "ସଠିକ୍",
+	"Correct": "ଠିକ୍",
 	"Skip": "ଏଡାନ୍ତୁ",
 	"hours": "ଘଣ୍ଟା",
 	"minutes": "ମିନିଟ୍",
 	"seconds": "ସେକେଣ୍ଡ",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ହୋମ୍ ପେଜକୁ ଯିବା ପାଇଁ ଏଠାରେ <a class=\"\" href=\"/\"> ଉପରେ କ୍ଲିକ କରନ୍ତୁ।</a>",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ଭାଷା ସ୍ୱୀକୃତି \"ମେସିନ୍-ଲର୍ନିଂ\" ଟେକ୍ନୋଲୋଜି ଉପରେ ନିର୍ଭର କରେ ଯେଉଁଥିରେ ଡାଟା ସେଟ୍ ର ବିଶାଳ ସଂଗ୍ରହ ଆବଶ୍ୟକ ତଥା ଯେଉଁଥିରେ ରହିଛି ବିବିଧ ଭାରତୀୟ ସ୍ୱର ଏବଂ ସଂପୃକ୍ତ ଟେକ୍ସଟ। ବାକ୍ୟାଂଶ ମାଧ୍ୟମରେ, ଆମେ ଭାରତୀୟ ସ୍ବର କହୁଥିବା ଭାରତୀୟ ଭାଷାର ଏକ ବ୍ୟାପକ ଉନ୍ମୁକ୍ତ ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବାକୁ ଚାହୁଁଛୁ ଯାହା ଏହି ପଦକ୍ଷେପ ପାଇଁ ବ୍ୟବହୃତ ହୋଇପାରିବ |",
-	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ଏକ ଟିମ ଭାବରେ, ଆମେ ଆପଣଙ୍କୁ ଆମ ସହିତ ଯୋଗଦେବାକୁ ଏବଂ ଏହି ପଦକ୍ଷେପରେ ଆପଣଙ୍କର ସ୍ୱର ପ୍ରଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛୁ। ଗୋଟିଏ ଥରରେ ଆପଣଙ୍କର ସ୍ବର ରେକର୍ଡିଂ କରିବା ହୁଏତ କଷ୍ଟକର ହୋଇପାରେ  ତେଣୁ, ଆମେ ଆମ ୱେବସାଇଟରେ ଶିକ୍ଷାଗ୍ରହଣକାରୀ ପଦକ୍ଷେପ ସୃଷ୍ଟି କରିଛୁ, ଯଦ୍ବାରା ଆପଣ ଆମକୁ ଏକାଧିକ ଥର ପରିଦର୍ଶନ କରିପାରିବେ ଏବଂ ଯେଉଁଠାରୁ ଛାଡ଼ିଥିଲେ ସେହି ସ୍ଥାନରୁ ପୁଣି ଥରେ ଆରମ୍ଭ କରିପାରିବେ। ",
-	"<b>Read once</b> before recording it": "ଏହାକୁ ରେକର୍ଡ଼ କରିବା ପୂର୍ବରୁ ଥରେ ପଢ଼ି ନିଅନ୍ତୁ",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ଭାଷା ସ୍ବୀକୃତି \"ମେସିନ୍ ଲର୍ଣ୍ଣିଂ\" ଟେକ୍‌ନୋଲୋଜି ଉପରେ ନିର୍ଭର କରେ ଯେଉଁଥିରେ ବିଭିନ୍ନ ସ୍ବରରେ ଓ ଏଥିସହିତ ସଂପୃକ୍ତ ଟେକ୍ସଟର ଡାଟାସେଟର ବୃହତ୍ ସଂଗ୍ରହ ରହିଛି । ବାକ୍ୟାଂଶ ଜରିଆରେ, ଆମେ ",
+	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ଏକ ଟିମ ଭାବରେ ଏହି ପଦକ୍ଷେପ ପାଇଁ ଆମେ ଆପଣଙ୍କୁ ଆମ ସହିତ ସାମିଲ୍ ହୋଇ ଆପଣଙ୍କର ସ୍ବର ପ୍ରଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛୁ। ଗୋଟିଏ ଥରରେ ସ୍ବରକୁ ରେକର୍ଡ କରିବା ହୁଏତ କଷ୍ଟକର ହୋଇପାରେ ସେଥିପାଇଁ ଆମେ ୱେବସାଇଟରେ ଆପଣଙ୍କ ପାଇଁ ଲର୍ଣ୍ଣର ପଦକ୍ଷେପ ସୃଷ୍ଟି କରିଛୁ ଯଦ୍ବାରା ଆପଣ ଅନେକ ଥର ପରିଦର୍ଶନ କରିପାରିବେ ଓ ଯେଉଁଠାରୁ ଛାଡ଼ି ଥିଲେ ସେହିଠାରୁ ଆରମ୍ଭ କରିପାରିବେ। ",
+	"<b>Read once</b> before recording it": "ରେକର୍ଡ଼ କରିବା ପୂର୍ବରୁ ଥରେ ପଢ଼ି ନିଅନ୍ତୁ",
 	"Feedback": "Feedback",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ରେକର୍ଡ଼ିଂକୁ ଭାଲିଡେଟ୍ କରିଥିବାରୁ ଆପଣଙ୍କୁ ଧନ୍ୟବାଦ",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
@@ -165,5 +165,18 @@
 	"Test Speakers": "ସ୍ପିକର ଟେଷ୍ଟ କରନ୍ତୁ",
 	"Recording": "ରେକର୍ଡ଼ିଂ କରନ୍ତୁ",
 	"Playing": "ପ୍ଲେ ହେଉଛି",
-	"Help your own language": "ନିଜ ଭାଷାରେ ସହାୟତା କରନ୍ତୁ"
+	"Transgender - He": "Transgender - He",
+	"Transgender - She": "Transgender - She",
+	"Rather Not Say": "Rather Not Say",
+	"Quick Tips": "Quick Tips",
+	"Read once <b>before recording it</b>": "ରେକର୍ଡ଼ କରିବା ପୂର୍ବରୁ ଥରେ ପଢ଼ି ନିଅନ୍ତୁ ",
+	"You are a champion": "ଆପଣ ଜଣେ ଚାମ୍ପିୟନ",
+	"WooHoo!! You took the first important step": "ଉହୁ !! ଆପଣ ପ୍ରଥମ ଗୁରୁତ୍ବପୂର୍ଣ୍ଣ ସୋପାନ ନେଇଛନ୍ତି",
+	"recordings contributed": "ରେକର୍ଡିଂ ପ୍ରଦାନ କରାଯାଇଛି",
+	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.",
+	"Did you know?": "ଆପଣ ଜାଣନ୍ତି କି?",
+	"Most data recorded for": "Most data recorded for",
+	"Data recorded for": "Data recorded for",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "ଆପଣଙ୍କର ଭାଷାକୁ  100 ଘଣ୍ଟାର ଲକ୍ଷ୍ୟ ହାସଲ କରିବାରେ ସହାୟତା କରନ୍ତୁ। ଆମେ ଜାଣୁ ଆପଣ ଅଧିକ କରିପାରିବେ!",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>"
 }
