|Priyanshu + Raunak| added translation for recording instructions

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -216,6 +216,6 @@
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
-	"Quick Tips": "Quick Tips",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>"
+	"Quick Tips": "দ্রুত টিপস",
+	"Read once <b>before recording it</b>": "এটি রেকর্ড করার আগে একবার পড়ুন"
 }
