--- a/locales/kn.json
+++ b/locales/kn.json
@@ -152,8 +152,8 @@
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
-	"Quick Tips": "Quick Tips",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Quick Tips": "ತ್ವರಿತ ಸಲಹೆಗಳು",
+	"Read once <b>before recording it</b>": "ರೆಕಾರ್ಡ್ ಮಾಡುವ ಮೊದಲು ಒಮ್ಮೆ ಅದನ್ನು ಓದಿ",
 	"Test your Microphone and Speakers": "ನಿಮ್ಮ ಮೈಕ್ರೊಫೋನ್ ಮತ್ತು ಧ್ವನಿವರ್ಧಕಗಳನ್ನು ಪರೀಕ್ಷಿಸಿ",
 	"Test mic": "ಮೈಕ್ ಪರೀಕ್ಷಿಸಿ",
 	"Test Speakers": "ಧ್ವನಿವರ್ಧಕವನ್ನು ಪರೀಕ್ಷಿಸಿ",
