--- a/locales/ml.json
+++ b/locales/ml.json
@@ -155,7 +155,7 @@
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
 	"Quick Tips": "ക്വിക്ക് ടിപ്സ്",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Read once <b>before recording it</b>": "റെക്കോർഡ് ചെയ്യുന്നതിനു മുൻപ് ഒരു തവണ വായിച്ചു നോക്കുക",
 	"You are a champion": "നിങ്ങളൊരു ജേതാവായിരിക്കുന്നു",
 	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
 	"recordings contributed": "റെക്കോർഡിംഗുകൾ സംഭാവന ചെയ്തു",
