--- a/locales/or.json
+++ b/locales/or.json
@@ -83,7 +83,7 @@
 	"Contribute your voice to create an open data repository of Indian languages": "ଭାରତୀୟ ଭାଷାର ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବା ପାଇଁ ଆପଣଙ୍କର ସ୍ୱରକୁ ପ୍ରଦାନ କରନ୍ତୁ।",
 	"Listen": "ଶୁଣନ୍ତୁ ",
 	"Verify What They Say": "ସେମାନେ ଯାହା କହୁଛନ୍ତି ତାହାକୁ ବୈଧ କରନ୍ତୁ",
-	"Help us by validating the voice samples that others have contributed": "ଅନ୍ୟମାନେ ପ୍ରଦାନ କରିଥିବା ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାରେ ଆମକୁ ସାହାଯ୍ୟ କରନ୍ତୁ ।",
+	"Help us by validating the voice samples that others have contributed": "ଅନ୍ୟମାନେ ପ୍ରଦାନ କରିଥିବା ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାରେ ଆମକୁ ସାହାଯ୍ୟ କରନ୍ତୁ।",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "ଆପଣଙ୍କର ପସନ୍ଦର ଭାଷାକୁ ବାଛନ୍ତୁ",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
@@ -94,7 +94,7 @@
 	"Thank you for your enthusiasm to validate the voice samples": "ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାକୁ ଆପଣଙ୍କର ଉତ୍ସାହ ପାଇଁ ଧନ୍ୟବାଦ।",
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ଆମେ ବର୍ତ୍ତମାନ <span id=\"spn-validation-language\"></span> ଭାଷା ପାଇଁ ଡାଟା ଅବଦାନ ଯାତ୍ରା ଆରମ୍ଭ କରିଛୁ ଏବଂ ଆଶା କରୁଛୁ ଖୁବ୍ ଶୀଘ୍ର ଆପଣଙ୍କର ବୈଧତା ପାଇଁ ଭଏସ୍ ନମୁନା ସଂଗ୍ରହ ହେବ।",
 	"Would you also like to contribute your voice?": "ଆପଣ ମଧ୍ୟ ଆପଣଙ୍କର ସ୍ବର ଦେବାକୁ ଚାହୁଁଛନ୍ତି କି?",
-	"Start Contributing": "ପ୍ରଦାନ କରନ୍ତୁ",
+	"Start Contributing": "ପ୍ରଦାନ କରିବା ଆରମ୍ଭ କରନ୍ତୁ",
 	"Thank you for validating!": "ବୈଧ କରାଇଥିବାରୁ ଆପଣଙ୍କୁ ଧନ୍ୟବାଦ!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.",
 	"total hours validated": "total hours validated",
@@ -133,12 +133,12 @@
 	"to go back to home page": "ହୋମ୍ ପେଜକୁ ଯିବା ପାଇଁ",
 	"Select the language": "ଭାଷା ଚୟନ କରନ୍ତୁ",
 	"All Languages": "ସମସ୍ତ ଭାଷା",
-	"We do not have any data for this language, would you like to contribute for it?": "ଏହି ଭାଷା ପାଇଁ ଆମ ନିକଟରେ କିଛି ଡାଟା ନାହିଁ, ଆପଣ ପ୍ରଦାନ କରିବାକୁ ଚାହିଁବେ କି?",
-	"Contribute Now": "ଏବେ ପ୍ରଦାନ କରନ୍ତୁ |",
-	"hours validated": "ବୈଧ ହୋଇଥିବା ଘଣ୍ଟା",
+	"We do not have any data for this language, would you like to contribute for it?": "ଏହି ଭାଷା ପାଇଁ ଆମ ନିକଟରେ କୌଣସି ଡାଟା ନାହିଁ, ଆପଣ ଏଥିପାଇଁ ପ୍ରଦାନ କରିବାକୁ ଚାହିଁବେ କି?",
+	"Contribute Now": "ବର୍ତ୍ତମାନ ଯୋଗଦାନ କରନ୍ତୁ |",
+	"hours validated": "ଘଣ୍ଟା ବୈଧ",
 	"Progress Chart": "ପ୍ରଗତି ଟାଇମଲାଇନ୍",
-	"Monthly": "ମାସ",
-	"Quarterly": "ତ୍ରୟମାସିକ",
+	"Monthly": "ମାସିକ",
+	"Quarterly": "ତୈମାସିକ",
 	"Gender Contribution": "ଲିଙ୍ଗ ଅବଦାନ",
 	"State Wise distribution": "ରାଜ୍ୟ ୱାରି ଆବଣ୍ଟନ",
 	"Age Group Distribution": "ବୟସ ବର୍ଗ ଆବଣ୍ଟନ",
@@ -165,11 +165,11 @@
 	"Test Speakers": "ସ୍ପିକର ଟେଷ୍ଟ କରନ୍ତୁ",
 	"Recording": "ରେକର୍ଡ଼ିଂ କରନ୍ତୁ",
 	"Playing": "ପ୍ଲେ ହେଉଛି",
+	"Help your own language": "ନିଜ ଭାଷାରେ ସହାୟତା କରନ୍ତୁ",
+	"Quick Tips": "କୁଇକ୍ ଟିପ୍\u200Cସ",
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
-	"Quick Tips": "Quick Tips",
-	"Read once <b>before recording it</b>": "ରେକର୍ଡ଼ କରିବା ପୂର୍ବରୁ ଥରେ ପଢ଼ି ନିଅନ୍ତୁ ",
 	"You are a champion": "ଆପଣ ଜଣେ ଚାମ୍ପିୟନ",
 	"WooHoo!! You took the first important step": "ଉହୁ !! ଆପଣ ପ୍ରଥମ ଗୁରୁତ୍ବପୂର୍ଣ୍ଣ ସୋପାନ ନେଇଛନ୍ତି",
 	"recordings contributed": "ରେକର୍ଡିଂ ପ୍ରଦାନ କରାଯାଇଛି",
