--- a/locales/pa.json
+++ b/locales/pa.json
@@ -161,8 +161,8 @@
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
 	"Feedback": "Feedback",
-	"Quick Tips": "Quick Tips",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Quick Tips": "ਕਵਿੱਕ ਨੁਕਤੇ",
+	"Read once <b>before recording it</b>": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਜ਼ਰੂਰ ਪੜ੍ਹੋ",
 	"Test your Microphone and Speakers": "ਆਪਣੇ ਮਾਈਕਰੋਫ਼ੋਨ ਅਤੇ ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test Speakers": "ਸਪੀਕਰ ਦੀ ਜਾਂਚ ਕਰੋ",
