--- a/locales/gu.json
+++ b/locales/gu.json
@@ -167,11 +167,13 @@
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
 	"Feedback": "Feedback",
-	"Quick Tips": "Quick Tips",
+	"Quick Tips": "ઝડપી ટિપ્સ",
 	"Read once <b>before recording it</b>": "તેને રેકોર્ડ કરતાં પહેલાં એક વખત વાંચો",
-	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
-	"Test mic": "Test mic",
-	"Test Speakers": "Test Speakers",
+	"Test your Microphone and Speakers": "તમારો માઈક્રોફોન અને સ્પીકર્સ ટેસ્ટ કરો",
+	"Test mic": "માઈક ટેસ્ટ કરો",
+	"Test Speakers": "સ્પીકર ટેસ્ટ કરો",
+	"Recording": "રેેકોર્ડિંગ",
+	"Playing": "ચાલી રહ્યું છે",
 	"You are a champion": "તમે વિજેતા છો",
 	"WooHoo!! You took the first important step": "વાહ ! તમે પહેલો મહત્વપૂર્ણ પડાવ લીધો",
 	"recordings contributed": "recordings contributed",
