--- a/locales/hi.json
+++ b/locales/hi.json
@@ -148,8 +148,8 @@
 	"Rather Not Say": "Rather Not Say",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
 	"Feedback": "Feedback",
-	"Quick Tips": "Quick Tips",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Quick Tips": "त्वरित सुझाव",
+	"Read once <b>before recording it</b>": "इसे रिकॉर्ड करने से पहले एक बार पढ़ें",
 	"Test your Microphone and Speakers": "अपने माइक्रोफ़ोन और स्पीकर का परीक्षण करें",
 	"Test mic": "टेस्ट माइक",
 	"Test Speakers": "टेस्ट स्पीकर्स",
