|Priyanshu + Raunak| added translation for recording instructions

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -183,6 +183,6 @@
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "તમારી ભાષાને તેના 100 કલાકના લક્ષ્યને હાંસલ કરવા મદદ કરો. અમે જાણીએ છીએ કે તમે વધુ કરી શકશો!",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Please test your <b>speakers</b>": "કૃપા કરીને તમારા <b>સ્પીકર્સ</b> ચકાસો",
 	"Help your own language": "તમારી ભાષાને મદદ કરો"
 }
