--- a/locales/or.json
+++ b/locales/or.json
@@ -178,5 +178,5 @@
 	"Most data recorded for": "Most data recorded for",
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "ଆପଣଙ୍କର ଭାଷାକୁ  100 ଘଣ୍ଟାର ଲକ୍ଷ୍ୟ ହାସଲ କରିବାରେ ସହାୟତା କରନ୍ତୁ। ଆମେ ଜାଣୁ ଆପଣ ଅଧିକ କରିପାରିବେ!",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>"
+	"Please test your <b>speakers</b>": "ଦୟାକରି ଆପଣଙ୍କର <b>ସ୍ପିକରକୁ</b> ଚେକ କରନ୍ତୁ"
 }
