Raunak | Footer alignment, Dashboard speakerDetails popup, test mic translations fixes

--- a/locales/en.json
+++ b/locales/en.json
@@ -189,6 +189,8 @@
 	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
 	"Test mic": "Test mic",
 	"Test Speakers": "Test Speakers",
+	"Recording": "Recording",
+	"Playing": "Playing",
 	"Quick Tips": "Quick Tips",
 	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
 	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
