--- a/locales/hi.json
+++ b/locales/hi.json
@@ -163,5 +163,6 @@
 	"Most data recorded for": "Most data recorded for",
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
-	"Help your own language": "अपनी भाषा में मदद करें"
+	"Help your own language": "अपनी भाषा में मदद करें",
+	"Please test your <b>speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें"
 }
