|Priyanshu | fixed width of say-listen logo to 140px for desktop

--- a/locales/en.json
+++ b/locales/en.json
@@ -197,5 +197,6 @@
 	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
 	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.",
 	"Help your own language": "Help your own language",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>"
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "<a class=\"\" href=\"/\">Click Here</a> to go back to home page"
 }
