|Sreejith| Update translations on terms and condition

--- a/locales/as.json
+++ b/locales/as.json
@@ -55,7 +55,7 @@
 	"Select Mother Tongue": "মাতৃভাষা বাছনি কৰক",
 	"Pick age range": "Pick age range",
 	"I have read and agree to the": "I have read and agree to the",
-	"Terms and Conditions": "Terms and Conditions",
+	"Terms and Conditions": "নিয়ম আৰু চৰ্ত্তাৱলী",
 	"LET'S GO": "আগবাঢ়ক",
 	"Hide details": "সকলোবোৰ লুকুৱাওক",
 	"Sign In": "Sign In",
@@ -186,7 +186,7 @@
 	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "আপোনাৰ কন্ঠ <b><span id=\"user-contribution\"></span></b><b><span></span></b> ৰ কাৰেণে ৰেকৰ্ড কৰি আপুনি যোগদান কৰিলে",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> বৈধতা প্ৰদান কৰাৰ বাবে আপোনাক ধন্যবাদ",
 	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "গগোট হিচাপে, আমি আপোনালোকক আমাৰ লগত যোগাদান কৰিবলৈ নিমন্ত্ৰণ জনাইছোঁ আৰু কন্ঠ দান কৰি আমাক উপকৃত কৰক। এক প্ৰসাৰিত আৰু অপতিৰোধ্যভাৱে আপোনালোকে আপোনালোকৰ কন্ঠ ৰেকৰ্ড কৰক, আমি আমাৰ ৱেবচাইটত শিকাৰ উপায় কৰি ৰাখিছোঁ, যাতে আপোনালোকে একাধিকবাৰ দৰ্শন কৰিব পাৰে আৰু যিখিনিত এৰি গৈছিল তাৰ পৰা আকৌ আৰম্ভ কৰিব পাৰে।",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "আগবাঢ়ি গৈছে মানে আপুনি <a href=\"/terms-and-conditions\">নিয়মাৱলীসমূহৰ</a> প্ৰতি সন্মতি প্ৰদান কৰিছে",
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "বৰঞ্চ কওঁক নহয়",
