--- a/locales/bn.json
+++ b/locales/bn.json
@@ -212,7 +212,7 @@
 	"Test Speakers": "স্পিকার পরীক্ষা করুন",
 	"Recording": "রেকর্ডিং",
 	"Playing": "শুরু হয়েছে",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "সামনের ধাপে এগিয়ে গিয়ে আপনি <a href=\"/terms-and-conditions\">শর্তাবলী</a> সম্মত হলেন",
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
