--- a/locales/hi.json
+++ b/locales/hi.json
@@ -146,7 +146,7 @@
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "आगे बढ़ने से आप <a href=\"/terms-and-conditions\">नियम और शर्तों</a> से सहमत होते हैं",
 	"Feedback": "Feedback",
 	"Quick Tips": "त्वरित सुझाव",
 	"Read once <b>before recording it</b>": "इसे रिकॉर्ड करने से पहले एक बार पढ़ें",
