--- a/locales/te.json
+++ b/locales/te.json
@@ -129,7 +129,7 @@
 	"<b>Read once</b> before recording it": "రికార్డ్ చేసే ముందు ఒకసారి చదవండి",
 	"Feedback": "Feedback",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> రికార్డింగ్లను చెల్లుబాటు చేసినందుకు ధన్యవాదాలు",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "<a href=\"/terms-and-conditions\">ముందుకు వెళ్తే మీరు షరతులు మరియు నిబంధనలను అంగీకరించాలి</a>",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "ముందుకు వెళ్తే మీరు <a href=\"/terms-and-conditions\">షరతులు మరియు నిబంధనలను</a> అంగీకరించాలి",
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
